fix: Dialog Header with icon is not center-aligned
Fixes #100

--- a/packages/skcom-css/src/components/dialog-header.scss
+++ b/packages/skcom-css/src/components/dialog-header.scss
@@ -7,6 +7,7 @@
 /// @link https://docs.google.com/document/d/1UJeTpXcB2MBL9Df4GUUeZ78xb-RshNIC_-LCIKmCo-8/edit?usp=sharing#heading=h.cbtnmhhyoqxp SKCom documentation
 ////
 
+@use "../abstracts/mixins.scss" as mix;
 @use "../abstracts/typography.scss" as type;
 
 .skc-dialog-header {
@@ -16,13 +17,26 @@
   padding: 1.5rem 1.5rem 0;
 }
 
-.skc-dialog-header h2 {
+.skc-dialog-header__icon {
+  align-self: center;
+  color: var(--secondary);
+
+  ~ h2 {
+    text-align: center;
+  }
+
+  .skc-icon {
+    @include mix.icon(0, 400, 1, 24);
+  }
+}
+
+.skc-dialog-header > h2 {
   @include type.font("headline-small");
   margin-block: 0;
   color: var(--on-surface);
 }
 
-.skc-dialog-header p {
+.skc-dialog-header > p {
   @include type.font("body-medium");
   margin-block: 0;
   color: var(--on-surface-variant);
